# pseudo3DEngine

./: .gitignore  CMakeLists.txt  Camera.h
src/: Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Circle2D.cpp  ClientUDP.cpp  ClientUDP.h  Enemy.cpp  Enemy.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Idrawable.h  Map2D.h  Menu.cpp  Menu.h  MsgType.h  NeuralNetwork.cpp  NeuralNetwork.h  Object2D.cpp  Object2D.h  ObjectType.h  OptimizedBots.cpp  OptimizedBots.h  Player.cpp  Player.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Poligon2D.cpp  Poligon2D.h  ReliableMsg.cpp  ReliableMsg.h  ResourceManager.cpp  ResourceManager.h  ServerUDP.cpp  ServerUDP.h  Time.cpp  Time.h  (+10 more)
